# alphazero-connect-four

./: .gitignore  CLAUDE.md  pyproject.toml
scripts/: play_dqn.py  train_dqn.py  train_tabular_q.py
src/rl_connect_four/: dqn.py  engine.py  mdp.py  tabular_q.py
tests/: test_engine.py  test_mdp.py  test_tabular_q.py
